tests/architecture/fixtures/invalid/ownership-boundaries/provider-business-rule.ts
declare function computeReturnTotals(): void;
computeReturnTotals();
